log
Thu Apr  7 11:27:25 HSP 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
ca30b9a
Thu Apr  7 11:28:25 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c73cf0
Thu Apr  7 11:30:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7553ee4
Thu Apr  7 11:32:21 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8af4a69
Thu Apr  7 11:41:13 HSP 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:28: error: too few arguments to function 'calloc'
     aux->buckets = (Pair**)calloc(capacity*sizeof(Pair*));
                            ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
4276eba
Thu Apr  7 11:41:46 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2159248
Thu Apr  7 12:05:17 HSP 2022: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:16: error: implicit declaration of function 'Hash' [-Werror=implicit-function-declaration]
     long idx = Hash(key, map->capacity);
                ^~~~
hashmap.c:49:40: error: expected ';' before ')' token
         idx = (idx + 1) % map->capacity);
                                        ^
hashmap.c:49:40: error: expected statement before ')' token
cc1.exe: all warnings being treated as errors
Compilation failed
9d597c5
Thu Apr  7 12:05:54 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:40: error: expected ';' before ')' token
         idx = (idx + 1) % map->capacity);
                                        ^
hashmap.c:49:40: error: expected statement before ')' token
Compilation failed
2b46ead
Thu Apr  7 12:06:51 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f14aaf
Thu Apr  7 12:13:13 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
905d503
Sun Apr 10 01:25:57 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
495a8b5
Sun Apr 10 01:36:07 HSP 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:94:51: error: comparison between pointer and integer [-Werror]
         if ( is_equal(key,map->buckets[idx]->key) == NULL) return;
                                                   ^~
hashmap.c:94:60: error: 'return' with no value, in function returning non-void [-Werror]
         if ( is_equal(key,map->buckets[idx]->key) == NULL) return;
                                                            ^~~~~~
hashmap.c:88:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
hashmap.c:99:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return idx;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4b877c9
Sun Apr 10 01:38:03 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:94:57: error: 'return' with no value, in function returning non-void [-Werror]
         if ( is_equal(key,map->buckets[idx]->key) == 0) return;
                                                         ^~~~~~
hashmap.c:88:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
hashmap.c:99:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return idx;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
c95db54
Sun Apr 10 10:44:42 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8938887
Sun Apr 10 10:45:56 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9f53fc1
Sun Apr 10 10:47:52 HSP 2022: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
79949bc
Sun Apr 10 11:01:25 HSP 2022: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  11|2
total_score: 50/70
1de616f
Sun Apr 10 11:10:35 HSP 2022: 
 hashmap.c | 29 ++++++++++++++++++++++-------
 1 file changed, 22 insertions(+), 7 deletions(-)
 tests:  0|0
cbf3f15
Sun Apr 10 11:14:58 HSP 2022: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
5435ab2
Sun Apr 10 11:23:19 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
ecd4c86
Sun Apr 10 11:33:16 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
896d0a0
Sun Apr 10 11:33:52 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
13f3285
Sun Apr 10 11:46:51 HSP 2022: 
 hashmap.c | 48 +++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 45 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:181:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(i = 0) return NULL;
     ^~
test.c: In function 'firstMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
test.c:511:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d04c345
Sun Apr 10 11:58:06 HSP 2022: 
 hashmap.c | 49 ++++---------------------------------------------
 1 file changed, 4 insertions(+), 45 deletions(-)
 tests:  13|2
total_score: 50/70
723b46f
Sun Apr 10 11:58:43 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
6a91f8e
Sun Apr 10 12:12:15 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
c704beb
Sun Apr 10 15:27:03 HSP 2022: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:82:12: error: variable 'aux' set but not used [-Werror=unused-but-set-variable]
     Pair **aux;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4126123
